--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 <body>
 	<nav>
 		<ul>
-			<li><a href #"home">Home</a</li>
-			<li><a href #"about">About</a</li>
-			<li><a href #"contact">Contact</a</li>
+			<li><a href="#home">Home</a</li>
+			<li><a href="#about">About</a</li>
+			<li><a href="#contact">Contact</a</li>
 			</ul>
 	</nav>
 	<section>
@@ -24,7 +24,7 @@
 			</audio>
 
 		<audio controls>
-			<source src =" http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
+			<source src ="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
 	</section>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
