--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
 			</audio><br>
 
 		<audio controls>
-			<source src ="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
+			<source src ="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3"></audio><br>
 	</section>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
