--- a/main.html
+++ b/main.html
@@ -16,15 +16,12 @@
 	</nav>
 	<section>
 		<h2>Audio Section</h2>
-		<audio controls>
-			<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3"></audio><br>
+		<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"></audio><br>
 		
-		<audio controls>
-			<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+		<audio conontols src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
 			</audio><br>
 
-		<audio controls>
-			<source src ="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3"></audio><br>
+		<audio controls src ="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"></audio><br>
 	</section>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
