--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 			</ul>
 	</nav>
 	<section>
-		<h2>Audio Section</h2>
+		<h2>3 random audios</h2>
 		<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"></audio><br>
 		
 		<audio conontols src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
